2007-11-01  Alexey Proskuryakov  <ap@webkit.org>

        Rubber-stamped by Adam Roben.

        Rolled out r27326 - debug CRT seems to cause no problems after all.

        * DumpRenderTree/win/DumpRenderTree.vcproj:

2007-10-31  Adam Roben  <aroben@apple.com>

        Switch the Debug configuration to using the non-debug CRT

        This matches WebKit.

        Reviewed by Steve.

        * DumpRenderTree/win/DumpRenderTree.vcproj:

2007-10-31  Antti Koivisto  <antti@apple.com>

        Reviewed by bdash.
        
        Disable media tests when doing leak checking on Tiger.
        They crash in QuickTime (rdar://problem/5537157).

        * Scripts/run-webkit-tests:

2007-10-29  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.
        
        Build media support by default on OSX only.

        * Scripts/build-webkit:

2007-10-30  Kevin McCullough  <kmccullough@apple.com>

        - Made Adam the reviewer for a previous checkin. Not sure how it didn't
        get caught by the pre-commit hooks.

2007-10-30  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Adam.

        - This is a collection of relatively unrelated changes and cleanups
        to Drosera to prepare it for interacting with WebKit.  A lot of these
        changes are just correcting mistakes, for example removing included
        headers that are no longer needed.

        * Drosera/DebuggerDocument.h: Added accessor for the ServerConnection
        this will be needed by the DebuggerClient.
        (DebuggerDocument::server):
        * Drosera/win/BaseDelegate.h: Removed unnecessary include.
        * Drosera/win/DebuggerClient.cpp: 
        (DebuggerClient::didFinishLoadForFrame): Finished implementing.
        (DebuggerClient::didReceiveTitle): Added comment about its purpose.
        (DebuggerClient::createWebViewWithRequest): Added comment about its
        purpose. 
        * Drosera/win/DebuggerClient.h: Removed unnecessary include, and forward