@@ -176,7 +176,16 @@ for my $dir (@projects) {
         }
     }
 
-    exit exitStatus($result) if exitStatus($result);
+    if (exitStatus($result)) {
+        if (isCygwin()) {
+            print "\n\n===== BUILD FAILED ======\n\n";
+            my $scriptDir = relativeScriptsDir();
+            print "Please ensure you have run $scriptDir/update-webkit to install depenedencies.\n\n";
+            my $baseProductDir = baseProductDir();
+            print "You can view build errors by checking the BuildLog.htm files located at:\n$baseProductDir/obj/<project>/<config>.\n";
+        }
+        exit exitStatus($result);
+    }
     chdir ".." or die;
 }
 
